syntax = "proto3";

package examplePackage;

service Example {
    rpc PingPong (PingRequest) returns (PingResponse) {}; // Unary Call
    rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {}; // Server Streaming Call
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}

message NumberRequest {
    int32 maxVal = 1;
}

message NumberResponse {
    int32 num = 1;
}
